updates views [before trying to fix responsive issue by removing wrap,push, etc.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,20 +17,20 @@
       html,
       body {
         height: 100%;
-        /* The html and body elements cannot have any padding or margin. */
-      }
+        /* The html and body elements cannot have any padding or margin. 
+      } */
 
       /* Wrapper for page content to push down footer */
-      #wrap {
+      /* #wrap {
         min-height: 100%;
         height: auto !important;
         height: 100%;
         /* Negative indent footer by it's height */
-        margin: 0 auto -60px;
-      }
+      /*  margin: 0 auto -60px;
+      } */
 
       /* Set the fixed height of the footer here */
-      #push,
+      /*#push,
       #footer {
         height: 60px;
       }
@@ -40,7 +40,7 @@
 
      #footer p {color: #B0B0B0;
      				margin-top: 20px;
-     }
+     }*/
 
 #show-row {padding-top: 20px;}
 
